--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,10 @@ p, li {
     font-style: italic;
     font-size: 1.2em;
 }
+
+footer img {
+    width: 10em;
+    height: 20em;
+    object-fit: cover;
+    border-radius: 1em;
+}
